@@ -6,6 +6,7 @@ general_PRIVATE_FCN_FILES = \
 
 general_FCN_FILES = \
   general/accumarray.m \
+  general/accumdim.m \
   general/arrayfun.m \
   general/bicubic.m \
   general/bitcmp.m \
